# oxc-zed

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTENANCE.md  README.md  extension.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
examples/both/: .oxlintrc.json  package.json  test.tsx
examples/both/.zed/: settings.json
examples/oxfmt/: package-lock.json  package.json
examples/oxfmt/.zed/: settings.json
examples/oxlint/custom-config/: package-lock.json  package.json
examples/oxlint/custom-config/.zed/: settings.json
examples/oxlint/nested-configs/: package-lock.json  package.json
examples/oxlint/nested-configs/.zed/: settings.json
examples/oxlint/nested-configs/package-a/: .oxlintrc.json  index.js  test.jsx
examples/oxlint/nested-configs/package-b/: .oxlintrc.json
examples/oxlint/nested-configs/package-c/: .oxlintrc.json
src/: lsp.rs  oxc.rs  oxfmt.rs  oxlint.rs
